--- a/stable/latest/book/g_object_subclassing.html
+++ b/stable/latest/book/g_object_subclassing.html
@@ -293,7 +293,7 @@ impl ObjectSubclass for CustomButton {
 impl ObjectImpl for CustomButton {
     fn constructed(&amp;self) {
         self.parent_constructed();
-        self.instance().set_label(&amp;self.number.get().to_string());
+        self.obj().set_label(&amp;self.number.get().to_string());
     }
 }
 
@@ -304,7 +304,7 @@ impl WidgetImpl for CustomButton {}
 impl ButtonImpl for CustomButton {
     fn clicked(&amp;self) {
         self.number.set(self.number.get() + 1);
-        self.instance().set_label(&amp;self.number.get().to_string())
+        self.obj().set_label(&amp;self.number.get().to_string())
     }
 }
 </code></pre>
