--- a/stable/latest/book/saving_window_state.html
+++ b/stable/latest/book/saving_window_state.html
@@ -263,9 +263,9 @@ impl ObjectImpl for Window {
     fn constructed(&amp;self) {
         self.parent_constructed();
         // Load latest window state
-        let instance = self.instance();
-        instance.setup_settings();
-        instance.load_window_size();
+        let obj = self.obj();
+        obj.setup_settings();
+        obj.load_window_size();
     }
 }
 impl WidgetImpl for Window {}
@@ -273,7 +273,7 @@ impl WindowImpl for Window {
     // Save window state right before the window will be closed
     fn close_request(&amp;self) -&gt; Inhibit {
         // Save window size
-        self.instance()
+        self.obj()
             .save_window_size()
             .expect(&quot;Failed to save window state&quot;);
 
